--- a/projetodomme/front-end/pages/login.html
+++ b/projetodomme/front-end/pages/login.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/login.css" />
+    <link rel="stylesheet" href="../css/login.css" />
     <title>Domme</title>
   </head>
   <body>
     <main id="conteudo-login">
       <section id="section-left">
         <div class="div-logo">
-          <img src="/image/logo.png" alt="" />
+          <img src="../img/logo.png" alt="" />
         </div>
       </section>
       <section id="section-right">
         <form class="form-login">
-            <img src="/image/logo.png" alt="Logo Domme">
+            <img src="../img/logo.png" alt="Logo Domme">
             <div class="textfield">
                 <label for="usuario">Email</label>
                 <input type="text" name="usuario" placeholder="Email">
