criacao de rotas

--- a/projetodomme/front-end/pages/cadastro.html
+++ b/projetodomme/front-end/pages/cadastro.html
@@ -10,8 +10,7 @@
 <body>
     <main>
         <section class="section-form">
-            <form>
-
+            <form id="form">
                     <label for="nome">Nome completo</label>
                     <input type="text" name="nome" id="input-nome" required>
 
@@ -56,5 +55,6 @@
             </div>
         </section>
     </main>
+    <script src="../js/cadastro.js"></script>
 </body>
 </html>
