Ajustes de estilização

--- a/projetodomme/front-end/pages/cadastro.html
+++ b/projetodomme/front-end/pages/cadastro.html
@@ -10,36 +10,36 @@
 <body>
     <main>
         <section class="section-form">
-            <form id="form">
+            <form id="form-cadastro">
                     <label for="nome">Nome completo</label>
-                    <input type="text" name="nome" id="input-nome" required>
+                    <input type="text" name="nome" id="input-nome" placeholder="Nome" required>
 
                     <label for="idade">Idade</label>
-                    <input type="text" name="idade" id="input-idade" required>
+                    <input type="text" name="idade" id="input-idade" placeholder="Idade" required>
 
                     <label for="cpf">CPF</label>
-                    <input type="text" name="cpf" id="input-cpf" required> 
+                    <input type="text" name="cpf" id="input-cpf" placeholder="CPF" required> 
 
                     <label for="sexo">Sexo</label>
-                    <input type="text" name="sexo" id="input-sexo" required>
+                    <input type="text" name="sexo" id="input-sexo" placeholder="Sexo" required>
 
                     <label for="dtNasc">Data de nascimento</label>
-                    <input type="text" name="dtNasc" id="input-nasc" required>
+                    <input type="text" name="dtNasc" id="input-nasc" placeholder="Data Nasc" required>
 
                     <label for="enderecoCid">Cidade</label>
-                    <input type="text" name="enderecoCid" id="input-cid" required>
+                    <input type="text" name="enderecoCid" id="input-cid" placeholder="Cidade" required>
 
                     <label for="enderecoRua">Rua</label>
-                    <input type="text" name="enderecoRua" id="input-rua" required>
+                    <input type="text" name="enderecoRua" id="input-rua" placeholder="Rua" required>
 
                     <label for="enderecoNr">Nº</label>
-                    <input type="text" name="enderecoNr" id="input-numero" required>
+                    <input type="text" name="enderecoNr" id="input-numero" placeholder="Endereço" required>
 
                     <label for="cep">CEP</label>
-                    <input type="text" name="cep" id="input-cep" required>
+                    <input type="text" name="cep" id="input-cep" placeholder="CEP" required>
 
                     <label for="telefone">Telefone</label>
-                    <input type="text" name="telefone" id="input-telefone" required>
+                    <input type="text" name="telefone" id="input-telefone" placeholder="Telefone" required>
 
                     <button id="btn-cadastrar">Cadastrar</button>
             </form>
@@ -48,7 +48,7 @@
         <section class="section-image">
             <div class="div-image">
                 <img src="../img/logo.png">
-                <ul>
+                <ul class="links-cadastro">
                     <li><a href="./home.html">Home</a></li>
                     <li><a href="./login.html">Voltar</a></li>
                 </ul>
