Tela de cadastro de quarto

--- a/projetodomme/front-end/pages/cadastrocliente.html
+++ b/projetodomme/front-end/pages/cadastrocliente.html
@@ -4,44 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/cadastro.css">
+    <link rel="stylesheet" href="../css/cadastrocliente.css">
     <title>Cadastre-se!</title>
 </head>
 <body>
     <main>
         <section class="section-form">
-            <form id="form-cadastro">
-                    <label for="nome">Nome completo</label>
+            <form id="form-cadastro-cliente">
+                    <label >Nome completo</label>
                     <input type="text" name="nome" id="input-nome" placeholder="Nome" required>
 
-                    <label for="idade">Idade</label>
+                    <label>Idade</label>
                     <input type="text" name="idade" id="input-idade" placeholder="Idade" required>
 
-                    <label for="cpf">CPF</label>
+                    <label>CPF</label>
                     <input type="text" name="cpf" id="input-cpf" placeholder="CPF" required> 
 
-                    <label for="sexo">Sexo</label>
+                    <label>Sexo</label>
                     <input type="text" name="sexo" id="input-sexo" placeholder="Sexo" required>
 
-                    <label for="dtNasc">Data de nascimento</label>
+                    <label >Data de nascimento</label>
                     <input type="text" name="dtNasc" id="input-nasc" placeholder="Data Nasc" required>
 
-                    <label for="enderecoCid">Cidade</label>
+                    <label>Cidade</label>
                     <input type="text" name="enderecoCid" id="input-cid" placeholder="Cidade" required>
 
-                    <label for="enderecoRua">Rua</label>
+                    <label>Rua</label>
                     <input type="text" name="enderecoRua" id="input-rua" placeholder="Rua" required>
 
-                    <label for="enderecoNr">Nº</label>
-                    <input type="text" name="enderecoNr" id="input-numero" placeholder="Endereço" required>
+                    <label>Nº</label>
+                    <input type="text" name="enderecoNr" id="input-numero" placeholder="Nº" required>
 
-                    <label for="cep">CEP</label>
+                    <label >CEP</label>
                     <input type="text" name="cep" id="input-cep" placeholder="CEP" required>
 
-                    <label for="telefone">Telefone</label>
+                    <label>Telefone</label>
                     <input type="text" name="telefone" id="input-telefone" placeholder="Telefone" required>
 
-                    <button id="btn-cadastrar">Cadastrar</button>
+                    <button type="submit" id="btn-cadastrar">Cadastrar</button>
             </form>
         </section>
 
@@ -49,12 +49,12 @@
             <div class="div-image">
                 <img src="../img/logo.png">
                 <ul class="links-cadastro">
-                    <li><a href="./home.html">Home</a></li>
-                    <li><a href="./login.html">Voltar</a></li>
+                    <li class="links-a"><a href="./home.html">Home</a></li>
+                    <li class="links-a"><a href="./login.html">Voltar</a></li>
                 </ul>
             </div>
         </section>
     </main>
-    <script src="../js/cadastro.js"></script>
+    <script src="../js/cadastrocliente.js"></script>
 </body>
 </html>
