--- a/projetodomme/front-end/pages/login.html
+++ b/projetodomme/front-end/pages/login.html
@@ -27,7 +27,7 @@
             <button class="btn-login">Entrar</button>
             <div class="links-cad-esqueceu">
               <a href="#">Esqueci minha senha</a>
-              <a href="./cadastro.html">Cadastrar</a>
+              <a href="./cadastrocliente.html">Cadastrar</a>
             </div>
         </form>
     </section>
