integracao da tela de cadastro de clientes com o API back-end

--- a/projetodomme/front-end/pages/cadastrocliente.html
+++ b/projetodomme/front-end/pages/cadastrocliente.html
@@ -76,7 +76,7 @@
         </div>
     </footer>
 
-    <script src="../js/carrosel.js"></script>
+    <script src="../js/postCliente.js"></script>
 </body>
 
 </html>
