--- a/projetodomme/front-end/pages/cadastroquarto.html
+++ b/projetodomme/front-end/pages/cadastroquarto.html
@@ -20,7 +20,10 @@
                 <li><a href="home.html">Home</a></li>
                 <li><a href="reservas.html">Reservas</a></li>
                 <li><a href="cadastrocliente.html">Cadastro de Cliente</a></li>
+                <li><a href="clientes.html">Clientes</a></li>
                 <li><a href="cadastroquarto.html">Cadastro de Suíte</a></li>
+                <li><a href="quartos.html">Suítes</a></li>
+                <li><a href="pagamento.html">Pagamento</a></li>
             </ul>
         </nav>
     </header>
@@ -42,7 +45,10 @@
                         <option value="master">Super Luxo</option>
                       </select>
 
-                    <button id="btn-cadastrar" type="submit">Cadastrar Quarto</button>
+                    <div>
+                        <button type="submit" id="btn-cadastro">Cadastrar</button>
+                        <button type="reset" id="btn-cadastro">Cancelar</button>
+                    </div>
             </form>
         </section>  
        
