integracao do botao de busca de clientes com a api

--- a/projetodomme/front-end/pages/cadastrocliente.html
+++ b/projetodomme/front-end/pages/cadastrocliente.html
@@ -64,7 +64,7 @@
 
                     <div>
                         <button type="submit" id="btn-cadastro">Cadastrar</button>
-                        <button type="reset" id="btn-cadastro">Cancelar</button>
+                        <button type="reset" id="btn-cancelar">Cancelar</button>
                     </div>
 
             </form>
