--- a/projetodomme/front-end/pages/clientes.html
+++ b/projetodomme/front-end/pages/clientes.html
@@ -34,7 +34,10 @@
             <button type="button" id="btn">Pesquisar</button>
         </form>
 
-        <div id="info"></div>  
+        <div id="info">
+            
+
+        </div>  
     </main>
 
     <footer>
@@ -48,8 +51,7 @@
         </div>
     </footer>
 
-    <!-- <script src="js/cliente.js"></script> -->
+   <script src="../js/getCliente.js"></script>
 
 </body>
-
 </html>
