integracao tela de cadastro de quarto e de pesquisa de quarto com API

--- a/projetodomme/front-end/pages/cadastroquarto.html
+++ b/projetodomme/front-end/pages/cadastroquarto.html
@@ -40,14 +40,14 @@
                     
                     <label>Categoria</label>
                     <select name="select" id="tipos-quartos">
-                        <option value="simples">Standard</option>
-                        <option value="medio">Hidro</option>
-                        <option value="master">Super Luxo</option>
+                        <option value="Standard">Standard</option>
+                        <option value="Hidro">Hidro</option>
+                        <option value="Super Luxo">Super Luxo</option>
                       </select>
 
                     <div>
                         <button type="submit" id="btn-cadastro">Cadastrar</button>
-                        <button type="reset" id="btn-cadastro">Cancelar</button>
+                        <button type="reset" id="btn-cancelar">Cancelar</button>
                     </div>
             </form>
         </section>  
@@ -65,7 +65,7 @@
         </div>
     </footer>
 
-    <script src="../js/carrosel.js"></script>
+    <script src="../js/postQuarto.js"></script>
 </body>
 
 </html>
