--- a/projetodomme/front-end/pages/cadastrocliente.html
+++ b/projetodomme/front-end/pages/cadastrocliente.html
@@ -45,7 +45,7 @@
                     <input type="text" name="sexo" id="input-sexo" placeholder="Sexo" required>
 
                     <label >Data de nascimento</label>
-                    <input type="text" name="dtNasc" id="input-nasc" placeholder="Data Nasc" required>
+                    <input type="date" name="dtNasc" id="input-nasc" placeholder="Data Nasc" required>
 
                     <label>Cidade</label>
                     <input type="text" name="enderecoCid" id="input-cid" placeholder="Cidade" required>
