--- a/projetodomme/front-end/pages/login.html
+++ b/projetodomme/front-end/pages/login.html
@@ -14,22 +14,23 @@
         </div>
       </section>
       <section id="section-right">
-        <form class="form-login">
+        <form id="form-login">
             <img src="../img/logo.png" alt="Logo Domme">
             <div class="textfield">
-                <label for="usuario">Email</label>
-                <input type="text" name="usuario" placeholder="Email">
+                <label for="usuario">Login Funcionário</label>
+                <input type="text" name="loginFuncionario" placeholder="Login Funcionário">
             </div>
             <div class="textfield">
                 <label for="senha">Senha</label>
-                <input type="password" name="senha" placeholder="Senha">
+                <input type="password" name="senhaFuncionario" placeholder="Senha">
             </div>
-            <button class="btn-login">Entrar</button>
+            <button id="btn-login">Entrar</button>
             <div class="links-cad-esqueceu">
               <a href="#">Esqueci minha senha</a>
             </div>
         </form>
     </section>
     </main>
+    <script src="../js/logar.js"></script>
   </body>
 </html>
