--- a/projetodomme/front-end/pages/home.html
+++ b/projetodomme/front-end/pages/home.html
@@ -18,7 +18,7 @@
                 <li><a href="reservas.html">Reservas</a></li>
                 <li><a href="cadastrocliente.html">Cadastro de Cliente</a></li>
                 <li><a href="clientes.html">Clientes</a></li>
-                <li><a href="cadastroquarto.html">Cadastro de Suíte</a></li>
+                <li><a href="cadastroquarto.html">Cadastro de Suítes</a></li>
                 <li><a href="quartos.html">Suítes</a></li>
                 <li><a href="pagamento.html">Pagamento</a></li>
             </ul>
