--- a/projetodomme/front-end/pages/cadastrocliente.html
+++ b/projetodomme/front-end/pages/cadastrocliente.html
@@ -39,7 +39,7 @@
                     <input type="text" name="cpf" id="input-cpf" placeholder="CPF" required> 
 
                     <label>Sexo</label>
-                    <input type="text" name="sexo" id="input-sexo" placeholder="Sexo" required>
+                    <input type="text" name="sexo" id="input-sexo" placeholder='"M" ou "F"' required>
 
                     <label >Data de nascimento</label>
                     <input type="date" name="dtNasc" id="input-nasc" placeholder="Data Nasc" required>
