Validacao de cep consumindo a API viacep

--- a/projetodomme/front-end/pages/cadastrocliente.html
+++ b/projetodomme/front-end/pages/cadastrocliente.html
@@ -44,6 +44,9 @@
                     <label >Data de nascimento</label>
                     <input type="date" name="dtNasc" id="input-nasc" placeholder="Data Nasc" required>
 
+                    <label>CEP</label>
+                    <input type="text" name="cep" id="input-cep" placeholder="CEP" required>
+
                     <label>Cidade</label>
                     <input type="text" name="enderecoCid" id="input-cid" placeholder="Cidade" required>
 
@@ -53,8 +56,6 @@
                     <label>Nº</label>
                     <input type="text" name="enderecoNr" id="input-numero" placeholder="Nº" required>
 
-                    <label >CEP</label>
-                    <input type="text" name="cep" id="input-cep" placeholder="CEP" required>
 
                     <label>Telefone</label>
                     <input type="text" name="telefone" id="input-telefone" placeholder="Telefone" required>
@@ -81,6 +82,7 @@
     </footer>
 
     <script src="../js/postCliente.js"></script>
+    <script src="../js/viacep.js"></script>
 </body>
 
 </html>
