--- a/projetodomme/front-end/pages/quartos.html
+++ b/projetodomme/front-end/pages/quartos.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/home.css">
     <link rel="stylesheet" href="../css/quartos.css">
     <title>Domme Motel - Suítes</title>
 </head>
@@ -34,7 +33,9 @@
             <button type="button" id="btn">Pesquisar</button>
         </form>
 
-        <div id="info"></div>  
+        <section id="quartos">
+            
+        </section>  
     </main>
 
     <footer>
