Padronizaçao do front

--- a/projetodomme/front-end/pages/cadastrocliente.html
+++ b/projetodomme/front-end/pages/cadastrocliente.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/home.css">
     <link rel="stylesheet" href="../css/cadastrocliente.css">
     <title>Domme Motel - Cadastro Cliente</title>
 </head>
@@ -60,9 +59,9 @@
                     <label>Telefone</label>
                     <input type="text" name="telefone" id="input-telefone" placeholder="Telefone" required>
 
-                    <div>
-                        <button type="submit" id="btn-cadastro">Cadastrar</button>
-                        <button type="reset" id="btn-cancelar">Cancelar</button>
+                    <div id="botoes-cliente">
+                        <button type="submit" class="btn-cadastro">Cadastrar</button>
+                        <button type="reset" class="btn-cancelar">Cancelar</button>
                     </div>
 
             </form>
