--- a/projetodomme/front-end/pages/home.html
+++ b/projetodomme/front-end/pages/home.html
@@ -25,7 +25,7 @@
         </nav>
     </header>
     
-    <main id="home">
+    <main>
 
         <div class="logo-nome">
             <img src="../img/logo.png">
