--- a/projetodomme/front-end/pages/pagamento.html
+++ b/projetodomme/front-end/pages/pagamento.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/home.css">
     <link rel="stylesheet" href="../css/pagamento.css">
     <title>Domme Motel - Pagamento
     </title>
@@ -31,37 +30,38 @@
     
     <main>
 
-    <section id="details" class="ns">
+    <section id="details" class="section-form">
         <p>Detalhes da Conta</p>
         <hr>
         <form class="form">
             <label>Suíte:</label>
-                <input type="text" name="suite" id="input-suite" required > 
+                <input type="text" name="suite" id="input-suite" placeholder="Suite" required > 
             <label>Categoria:</label>
-                <input type="text" name="categoria" id="input-categoria" required> 
+                <input type="text" name="categoria" id="input-categoria" placeholder="Categoria" required> 
             <label>Entrada:</label>
-                <input type="text" name="entrada" id="input-entrada" required> 
+                <input type="text" name="entrada" id="input-entrada" placeholder="Hora da Entrada" required> 
             <label>Saída:</label>
-                <input type="text" name="saida" id="input-saida" required> 
+                <input type="text" name="saida" id="input-saida" placeholder="Hora da Saída" required> 
             <label>Permanência:</label>
-                <input type="text" name="permanencia" id="input-permanencia" required> 
+                <input type="text" name="permanencia" id="input-permanencia" placeholder="Tempo de Permanência" required> 
             <label>Qtde. de pessoas:</label>
-                <input type="text" name="qtdpessoas" id="input-qtdpessoas" required> 
+                <input type="text" name="qtdpessoas" id="input-qtdpessoas" placeholder="Qtde. de Pessoas" required> 
         </form>
 
     </section>
-    <section id="consumo" class="ns">
+
+    <section id="consumo" class="section-form">
         <p>Consumo</p>
         <hr>
         <form class="form">
             <label>Consumo:</label>
-            <input type="text" name="consumo" id="input-consumo" required> 
-            <label>Adiantamento:</label>
-            <input type="text" name="adiantamento" id="input-adiantamento" required> 
-            Total:<br>
+            <input type="text" name="consumo" id="input-consumo" placeholder="Consumo" required> 
+            <label>Total::</label>
+            <br>
         </form>
     </section>
-    <section id="pag">
+
+    <section id="pag" class="section-form">
         <p>Pagamento:</p>
         <hr>
         <form id="pagamento">
@@ -71,8 +71,8 @@
                 <input type="radio" name="pagamento" value="debito">Débito  <br>
                 <input type="radio" name="pagamento" value="credito">Crédito  <br>
                 <div>
-                    <button type="submit" id="btn-pag">Confirmar</button>
-                    <button type="reset" id="btn-pag">Cancelar</button>
+                    <button type="submit" class="btn-pag">Confirmar</button>
+                    <button type="reset" class="btn-pag">Cancelar</button>
                 </div>
         </form>
     </section>
