--- a/projetodomme/front-end/pages/reservas.html
+++ b/projetodomme/front-end/pages/reservas.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/home.css">
-    <link rel="stylesheet" href="../css/cadastrocliente.css">
+    <link rel="stylesheet" href="../css/reservas.css">
     <title>Domme Motel - Cadastro Cliente</title>
 </head>
 
