Melhorias na tela de cliente

--- a/projetodomme/front-end/pages/cadastrocliente.html
+++ b/projetodomme/front-end/pages/cadastrocliente.html
@@ -60,8 +60,8 @@
                     <input type="text" name="telefone" id="input-telefone" placeholder="Telefone" required>
 
                     <div id="botoes-cliente">
-                        <button type="submit" class="btn-cadastro">Cadastrar</button>
-                        <button type="reset" class="btn-cancelar">Cancelar</button>
+                        <button type="submit" id="btn-cadastro" class="btn-cadastro">Cadastrar</button>
+                        <button type="reset" id="btn-cancelar" class="btn-cancelar">Cancelar</button>
                     </div>
 
             </form>
