--- a/projetodomme/front-end/pages/clientes.html
+++ b/projetodomme/front-end/pages/clientes.html
@@ -33,10 +33,10 @@
             <button type="button" id="btn">Pesquisar</button>
         </form>
 
-        <div id="info">
+        <ul id="lista">
             
 
-        </div>  
+        </ul>  
     </main>
 
     <footer>
