função update dos quartos completa

--- a/projetodomme/front-end/pages/quartos.html
+++ b/projetodomme/front-end/pages/quartos.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/quartos.css">
     <link rel="stylesheet" href="../css/alterarQuarto.css">
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <title>Domme Motel - Suítes</title>
 </head>
 
