telas de clientes

--- a/projetodomme/front-end/pages/cadastrocliente.html
+++ b/projetodomme/front-end/pages/cadastrocliente.html
@@ -38,8 +38,10 @@
                     <input type="text" name="cpf" id="input-cpf" placeholder="CPF" required> 
 
                     <label>Sexo</label>
-                    <input type="text" name="sexo" id="input-sexo" placeholder='"M" ou "F"' required>
-
+                    <select name="sexo" class="input-sexo" id="input-sexo" placeholder='Sexo"' required>
+                        <option value="M">Masculino</option>
+                        <option value="F">Feminino</option>
+                    </select>
                     <label >Data de nascimento</label>
                     <input type="date" name="dtNasc" id="input-nasc" placeholder="Data Nasc" required>
 
