tela cliente finalizada

--- a/projetodomme/front-end/pages/clientes.html
+++ b/projetodomme/front-end/pages/clientes.html
@@ -61,6 +61,9 @@
 
                     <label for="enderecoRua">Rua</label>
                     <input type="text" name="enderecoRua" class="dialog" readonly id="input-rua">
+
+                    <label for="enderecoNumero">Numero°</label>
+                    <input type="text" name="enderecoNumero" class="dialog" id="input-numero">
                     
 
                     <div class="btns-dialog">
