--- a/projetodomme/front-end/pages/clientes.html
+++ b/projetodomme/front-end/pages/clientes.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/alterarCliente.css">
     <link rel="stylesheet" href="../css/clientes.css">
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <title>Domme Motel - Clientes</title>
 </head>
 
