--- a/projetodomme/front-end/pages/pagamento.html
+++ b/projetodomme/front-end/pages/pagamento.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/pagamento.css">
-    <title>Domme Motel - Pagamento
-    </title>
+    <title>Domme Motel - Pagamento</title>
 </head>
 
 <body>
