cadastrofunc sem placeholder

--- a/projetodomme/front-end/pages/cadastrofunc.html
+++ b/projetodomme/front-end/pages/cadastrofunc.html
@@ -18,19 +18,19 @@
             <h2>Cadastro do Funcionário</h2>
             <div class="textfield">
                 <label for="usuario">Nome do Funcionário</label>
-                <input type="text" name="loginFuncionario" placeholder="Nome do Funcionário">
+                <input type="text" name="loginFuncionario">
             </div>
             <div class="textfield">
                 <label for="usuario">Novo Login</label>
-                <input type="text" name="loginFuncionario" placeholder="Login Funcionário">
+                <input type="text" name="loginFuncionario">
             </div>
             <div class="textfield">
                 <label for="senha">Senha</label>
-                <input type="password" name="senhaFuncionario" placeholder="Senha">
+                <input type="password" name="senhaFuncionario">
             </div>
             <div class="textfield">
                 <label for="senha">Confirmar Senha</label>
-                <input type="password" name="senhaFuncionario" placeholder="Confirmar Senha">
+                <input type="password" name="senhaFuncionario">
             </div>
             <button id="btn-login">Cadastrar</button>
             <div class="btncancelar">
