--- a/projetodomme/front-end/pages/login.html
+++ b/projetodomme/front-end/pages/login.html
@@ -26,7 +26,7 @@
             </div>
             <button id="btn-login">Entrar</button>
             <div class="links-cad-esqueceu">
-              <a href="#">Cadastrar funcionário</a>
+              <a href="cadastrofunc.html">Cadastrar funcionário</a>
             </div>
         </form>
     </section>
